[package]
name = "merlin"
version = "1.0.3"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>",
           "isis agora lovecruft <isis@patternsinthevoid.net>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/dalek-cryptography/merlin"
homepage = "https://docs.rs/merlin"
documentation = "https://docs.rs/merlin"
categories = ["cryptography"]
keywords = ["cryptography", "zero-knowledge", "fiat-shamir", "transcript"]
description = "Composable proof transcripts for public-coin arguments of knowledge"
exclude = [".travis.yml", ".gitignore"]

[package.metadata.docs.rs]
# We need nightly to build docs
features = ["nightly"]

[dependencies]
keccak = { version = "0.1.0", default-features = false }
byteorder = { version = "1.2.4", default-features = false }
clear_on_drop = { version = "0.2.3", default-features = false }
rand_core = { version = "0.3", default-features = false }
hex = {version = "0.3", default-features = false }

[dev-dependencies]
strobe-rs = "0.3"
curve25519-dalek = "1"
rand_chacha = "0.1"
rand = "0.6"

[features]
default = ["std"]
nightly = ["clear_on_drop/nightly"]
debug-transcript = ["hex"]
std = ["rand_core/std"]
alloc = ["rand_core/alloc"]
